--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ cache:
   
 addons:
   ssh_known_hosts:
-  - $SERVER_IP
+  - SHA256:bKkoQ3ljfjjiLPyaFARMv9vXclSZQM/Y/7ni1EFpV4A
   
 script: 
   - mvn package -nsu -DskipMunitTests --file pom.xml
+  - cat ~/.ssh/known_hosts
   - scp $TRAVIS_BUILD_DIR/target/$JAR_FILE $SERVER_USER@$SERVER_IP:$MULE_HOME
   - ssh $SERVER_USER@$SERVER_IP sh $MULE_HOME/deploy.sh $JAR_FILE staging
